* #1148958 by lussoluca, DamienMcKenna: Added hook_menu_minipanels_style()
  and hook_menu_minipanels_styles() to allow creation of custom styles.
* #1234620 by DamienMcKenna: improve hook_init() implementation.
* #1185506 by DamienMcKenna: Indicate which fields are really required, don't
  output settings which are not required.


Menu_MiniPanels 6.x-1.2, 2011-01-09
***********************************
All users advised to upgrade from 1.1 and 1.0.

NOTE: (If not already done in 1.1 upgrade) Manual update process required. If
you are upgrading an existing site that uses Menu_MiniPanels, you'll need to
edit and save (without changing options) each menu item that uses a
menu_minipanel to make it work.

* Fix issue introduced in last update. Any menu item that didn't have a
  specific element set was broken.
* #991246 - Additional fix. Moving minipanel rendering from init to footer,
  broke panels css display, because minipanels were rendered after css had
  already been added to page.


Menu_MiniPanels 6.x-1.1, 2011-01-08
***********************************
NOTE: Manual update process required. If you are upgrading an existing site
that uses Menu_MiniPanels, you'll need to edit and save (without changing
options) each menu item that uses a menu minipanel to make it work.

* #997476 - Suggestion from sammo. Add ability to set custom target for the
  minipanel, to enable things like full width drop downs.
* #980592 - Not working when using same menu. When the same menu was added on
  the same page (e.g primary links in a block), Drupal.settings was being set
  twice and breaking javascript. Thus add a check if the mlid has already
  been added. This also fixes an issue introduced in previous commit that
  meant minipanels would only work with primary and secondary links.
* #945886 - Using the same minipanel for more than one menu item doesn't work.
  This is fixed with some re-engineering to use the mlid in the